Added exceptions, passing data to chartsview works and working on connecting to selected wifi network

--- a/SwiftDataAcquisition/TODO.txt
+++ b/SwiftDataAcquisition/TODO.txt
@@ -7,3 +7,5 @@ TODO:
     -check how this ESP32 access point works
     -fix contents of file - unnecessary saving of frames
     -add option to stop measurement when pressing the STOP button
+DONE:
+    -conversion from 8 bit MSB, LSB to 16 bit value
