Updated TODO file, implemented frame counter reading. TODO: Fix updating of frameCounter count on measurements panel

--- a/SwiftDataAcquisition/TODO.txt
+++ b/SwiftDataAcquisition/TODO.txt
@@ -8,6 +8,7 @@ TODO:
     -fix contents of file - unnecessary saving of frames
     -add option to stop measurement when pressing the STOP button
     -add option to select measurement device? and to pick data from this device to display on charts?
+    -update frame counter on measurements panel via getting current frame number from wifiHandler periodically
 DONE:
     -conversion from 8 bit MSB, LSB to 16 bit value
     -Big graph view
